bug fix - height 100vh applied to home page body to fix overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -36,6 +36,10 @@ body {
     padding-bottom: 20rem;
 }
 
+.body-home {
+    height: 100vh;
+}
+
 .no-webp body {
     background:
         /* top, transparent black, with gradient */
